# Numerical_Toolkit

./: .gitignore  .gitmodules  AEROFOIL_SOLVER_ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  README.md  VENV_SETUP.md  angle_distribution.csv  angle_distribution_improved.csv  aspect_ratio_distribution.csv  aspect_ratio_distribution_improved.csv  build_FEM_Solver.sh  build_and_plot.sh  build_and_test.sh  output.txt  requirements.txt  run.sh  temp
.claude/: settings.json
.github/workflows/: ci.yml
apps/1d_heat_equation/: CMakeLists.txt  config.yaml  main.cpp
apps/UI/: Boundary_nodes.csv  CAD.py  CMakeLists.txt  GUI.py  Nodes.step  boundary_nodes_circular.csv  boundary_nodes_rectangular.csv  circumcircles.csv  elements_rectangular.csv  main.cpp  mesh_audit.md  mesh_visualisation_tool.py  plot_steady_state.py  steady_state_elements.csv  steady_state_nodes.csv  triangulation.csv   g×™ÿ
apps/lid_driven_cavity/: CMakeLists.txt  main.cpp
include/app_support/: app_FEM.h  app_FEM_UI.h  app_forward_euler.h
include/mesh_generation/: algorithm_advancing_front_triangulation.h  algorithm_delaunay_triangulation.h  mesh_generation.h  mesh_geometry.h  mesh_triangulation_algorithm.h  mesh_types.h  quadtree.h  shape_generators.h  triangulation_algorithm.h
include/nt/: build_matrix  build_matrix.cpp  build_matrix.h  forward_euler.cpp  forward_euler.h  grid.cpp  grid.h  init_matrix.cpp  init_matrix.h  p_cal.cpp
include/nt/finite_element_methods/: FEM_Global_Stiffness_Matrix.h  FEM_Heat_Equation.h  FEM_Potential_Flow.h
include/nt/finite_methods/: crank_nicholson.h
include/nt/finite_volume_methods/: FVM_flux.h  FVM_gas_model.h  FVM_mesh.h
include/nt/setup/: build_matrix.h  init_matrix.h  p_cal.h
include/nt/setup/finite_element_methods/: FEM_Global_Stiffness_Matrix.h
results/csv/: Nodes.csv
results/metrics/: angle_distribution.csv  angle_distribution_improved.csv  aspect_ratio_distribution.csv  aspect_ratio_distribution_improved.csv
results/step/: rectangle.step
src/app_support/: app_FEM.cpp  app_FEM_UI.cpp  app_forward_euler.cpp
src/mesh_generation/: mesh_Advancing_Front.cpp  mesh_Bowyer_Watson.cpp  mesh_cleanup.cpp  mesh_generation.cpp  mesh_init.cpp  mesh_metrics.cpp  mesh_sampling.cpp  mesh_triangulation.cpp  mesh_triangulation_algorithm.cpp  quadtree.cpp  shape_generators.cpp
src/nt/: forward_euler.cpp  grid.cpp  init_matrix.cpp  p_cal.cpp
src/nt/finite_methods/: crank_nicholson.cpp  forward_euler.cpp
src/nt/finite_volume_methods/: FVM_gas_model.cpp
src/nt/setup/: build_matrix.cpp  grid.cpp  init_matrix.cpp  p_cal.cpp
src/nt/setup/finite_element_methods/: FEM_Global_Stiffness_Matrix.cpp
tests/: CMakeLists.txt  test_FEM_potential_flow.cpp  test_FVM_flux.cpp  test_FVM_gas_model.cpp  test_FVM_mesh.cpp  test_Global_Stiffness_Matrix.cpp  test_cn.cpp  test_fe.cpp  test_matrix.cpp  test_mesh_geometry.cpp  test_shape_generation.cpp  test_triangulation.cpp
